[package]
name = "ac_nh_wiki_dump"
version = "0.1.0"
authors = ["panicbit <panicbit.dev@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.10.4", features = ["blocking"] }
select = "0.4.3"
serde_json = "1.0.48"
failure = "0.1.7"
serde = { version = "1.0.105", features = ["derive"] }
itertools = "0.9.0"
regex = "1.3.6"
image = "0.23.2"
maplit = "1.0.2"
